# libsudoku

./: .gitignore  .travis.yml  CMakeLists.txt  LICENCE.txt  README.md
doc/: CMakeLists.txt  libsudoku.doxyfile.in
doc/reference/: _r_e_a_d_m_e_8md_source.html  classtcb_1_1sudoku_1_1grid-members.html  example_8c-example.html  example_8cpp-example.html  examples.html  files.html  globals.html  group__c__api.html  group__cpp__api.html  index.html  menudata.js  sudoku_8h.html  sudoku_8h_source.html  sudoku_8hpp_source.html
doc/reference/search/: all_8.js  all_c.js  functions_1.js  functions_3.js  functions_a.js  functions_b.js
docs/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  globals_func.html  globals_type.html  group__cpp__api.html  sudoku_8hpp.html
docs/html/search/: all_5.js  all_7.js  classes_0.js  files_0.js  functions_6.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  typedefs_0.js
docs/reference/: classtcb_1_1sudoku_1_1grid.html  dir_7282b5041abdfaff46338eed8e174cc1.html  functions_func.html  menudata.js  modules.html  sudoku_8hpp_source.html
docs/reference/search/: all_2.js  all_4.js  all_6.js  all_9.js  all_c.js  functions_0.js  groups_0.js
example/: CMakeLists.txt  example.c  example.cpp
include/tcb/: sudoku.h  sudoku.hpp
src/: c_api.cpp  grid.cpp  main.cpp  nanorange.hpp  solver.cpp  tables.hpp
test/: CMakeLists.txt  test_c.c  test_c_api.c  test_cpp.cpp  test_cpp_api.cpp  test_solver_c.c  test_solver_cpp.cpp
util/: generate-tables.cpp
